# banish

./: .gitignore  Cargo.toml  README.md
.claude/skills/banish/: SKILL.md
banish/: Cargo.toml  README.md
banish/src/: banish_dispatch.rs  lib.rs
banish_derive/: Cargo.toml  README.md
banish_derive/src/: codegen.rs  lib.rs  machine.rs  parse_ast.rs  validate.rs
docs/: README.md  reference.md
test_suite/: Cargo.toml
test_suite/mock_data/: records.txt  records_clean.txt
test_suite/src/: main.rs
test_suite/tests/: async.rs  basic.rs  dragon_fight.rs  errors.rs  isolate.rs  logic.rs  order_processing.rs  pattern_conditions.rs  record_normalizer.rs  traffic_lights.rs  utilities.rs
test_suite/tests/errors/: banishdispatch_on_nonenum.rs  banishdispatch_on_nonenum.stderr  break_in_final_state.rs  break_in_final_state.stderr  conditionless_rule_with_fallback.rs  conditionless_rule_with_fallback.stderr  duplicate_attribute.stderr  duplicate_block_attribute.rs  duplicate_block_attribute.stderr  duplicate_rule_name.rs  duplicate_rule_name.stderr  duplicate_state_attribute.rs  duplicate_state_attribute.stderr  duplicate_state_name.rs  duplicate_state_name.stderr  final_state_guarded_transition_only.rs  final_state_guarded_transition_only.stderr  final_state_missing_exit.rs  final_state_missing_exit.stderr  isolated_state_guarded_transition_only.rs  isolated_state_guarded_transition_only.stderr  isolated_state_max_entry_only.rs  isolated_state_max_entry_only.stderr  isolated_state_no_exit.rs  isolated_state_no_exit.stderr  machine_attr_no_banish.rs  machine_attr_no_banish.stderr  machine_attr_passed_args.rs  machine_attr_passed_args.stderr  max_entry_zero.rs  max_entry_zero.stderr  max_iter_zero.rs  max_iter_zero.stderr  multiple_attribute_blocks.stderr  multiple_block_attribute_blocks.rs  multiple_block_attribute_blocks.stderr  multiple_state_attribute_blocks.rs  multiple_state_attribute_blocks.stderr  rule_missing_body.rs  rule_missing_body.stderr  (+15 more)
testing/: Cargo.toml
testing/tests/: basic.rs  logic.rs  tests.rs  traffic_lights.rs
