[package]
name = "banish"
version = "1.4.1"
edition = "2024"
description = "A declarative framework for rule-based state machines."
license = "MIT OR Apache-2.0"
repository = "https://github.com/LoganFlaherty/banish"
readme = "README.md"
keywords = ["state-machine", "framework", "declarative", "no_std", "proc_macro"]

[dependencies]
banish_derive = "1.4.1"
log = "0.4.29"

[dependencies.env_logger]
version = "0.11.9"
optional = true

[features]
trace-logger = ["env_logger"]