[package]
name = "banish_derive"
version = "1.3.0"
edition = "2024"
description = "A declarative framework for rule-based state machines."
license = "MIT OR Apache-2.0"
repository = "https://github.com/LoganFlaherty/banish"
readme = "README.md"
keywords = ["state-machine", "framework", "declarative", "proc-macro", "automata"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.117", features = ["full"] }
quote = "1.0.45"
proc-macro2 = "1.0.106"