[package]
name = "testing"
version = "0.1.0"
edition = "2024"

[dependencies]
banish = { path = "../banish" }
rand = "0.10.0"
env_logger = "0.11.9"
trybuild = "1.0.116"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json"] }
